bug/HWPD-2211/allow-text-link-wrapping (#351)
- Adjusted Text link styles to allow wrapping
- Added some extra Storys to demo a few use cases

--- a/src/component-library/core-components/TextLink/TextLink.module.scss
+++ b/src/component-library/core-components/TextLink/TextLink.module.scss
@@ -2,7 +2,7 @@
 @use '../../utilities/index.module' as *;
 
 .text-link {
-  width: max-content;
+  display: inline-block;
 
   a {
     text-decoration: none;
@@ -45,6 +45,11 @@
     &:disabled {
       color: var(--text-link-disabled-text);
       pointer-events: none;
+    }
+
+    > svg,
+    > :has(svg) {
+      flex: 0 0 auto;
     }
   }
 
